# ROS

./: README.md
dev_ws/install/Lib/: dictionary_interface__python.lib  dictionary_interface__rosidl_typesupport_c.lib  dictionary_interface__rosidl_typesupport_cpp.lib  dictionary_interface__rosidl_typesupport_fastrtps_cpp.lib  dictionary_interface__rosidl_typesupport_introspection_cpp.lib  tutorial_interfaces__rosidl_generator_c.lib  tutorial_interfaces__rosidl_typesupport_cpp.lib  tutorial_interfaces__rosidl_typesupport_fastrtps_cpp.lib  tutorial_interfaces__rosidl_typesupport_introspection_c.lib  tutorial_interfaces__rosidl_typesupport_introspection_cpp.lib
dev_ws/install/Lib/dec_to_oct_hex/: listener-script.py  talker-script.py
dev_ws/install/Lib/my_package_py/: my_node-script.py
dev_ws/install/Lib/py_pubsub/: listener-script.py  talker-script.py
dev_ws/install/Lib/py_srvcli/: client-script.py  service-script.py
dev_ws/install/Lib/tallest_building/: client-script.py  server-script.py  service-script.py
dev_ws/install/share/dec_to_oct_hex/: package.bat  package.dsv  package.ps1
dev_ws/install/share/dictionary_interface/: package.bat  package.dsv  package.ps1
dev_ws/install/share/my_package_c/: local_setup.bat  local_setup.dsv  package.bat  package.dsv  package.ps1  package.xml
dev_ws/install/share/my_package_cpp/: local_setup.dsv  package.bat  package.dsv  package.ps1
dev_ws/install/share/my_package_py/: package.bat  package.dsv  package.ps1  package.xml
dev_ws/install/share/my_package_python/: package.bat  package.dsv  package.ps1  package.xml
dev_ws/install/share/py_pubsub/: package.bat  package.dsv  package.ps1  package.xml
dev_ws/install/share/py_srvcli/: package.bat  package.dsv  package.ps1  (+1 more)
dev_ws/log/: latest_build
dev_ws/src/university_tasks/task_2/tallest_building/: package.xml  setup.cfg  setup.py
dev_ws/src/university_tasks/task_2/tallest_building/tallest_building/: service_function.py
(+58 files in other folders)
