<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_pubsub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Artyrrr08@gmail.com">Arthur Strekozov</maintainer>
  <license>TODO: Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
	# далее идут операторы импорта моего узла. Это объявляния нуждны пакету rclpy и std_msgs во время выполнения кода.
	<exec_depend>rclpy</exec_depend> # из туториала 
	<exec_depend>std_msgs</exec_depend> # из туториала
  </export>
</package>
